# sota-rca-study

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  REFERENCE.md  REPRODUCTION.md  SETUP_INPUTS.md  pyproject.toml
configs/matrix/: demo.yaml  example.yaml  full.yaml
configs/models/: catalog.yaml
dashboard/: run_dashboard.py
dashboard/backend/: main.py
dashboard/backend/api/: deps.py  utils.py
dashboard/backend/api/routes/: analysis.py  filters.py  matrix.py  metrics.py  samples.py
dashboard/backend/schemas/: __init__.py  metrics.py  sample.py
dashboard/frontend/: index.html  package-lock.json  package.json
dashboard/frontend/src/: App.tsx  index.css
dashboard/frontend/src/api/: client.ts  types.ts
dashboard/frontend/src/pages/: CaseDetailPage.tsx  CaseListPage.tsx  ComparisonPage.tsx  MatrixView.tsx  OverviewPage.tsx
docs/: ADDING_FRAMEWORK.md  ADDING_MODEL.md  ARCHITECTURE.md  MAC_NOTES.md  SESSIONS.md  TROUBLESHOOTING.md
frameworks/aiq/: CLAUDE.md  agent_runner.py  pyproject_sota_rca.toml
frameworks/claudecode/: .gitignore  CLAUDE.md  agent_runner.py  backfill_compress.py  pyproject.toml  pyproject_sota_rca.toml
frameworks/mabc/: .gitignore  CLAUDE.md  DATA_ADAPTER.md  agent_runner.py  convert_all.py  convert_data.py  data_adapter.py  pyproject_sota_rca.toml  run_batch.py  test_smoke.py
frameworks/mabc/agents/base/: run.py
frameworks/mabc/agents/tools/: data_detective_tools.py  fault_mapper_tools.py  probability_oracle_tools.py  solution_engineer_tools.py
frameworks/mabc/utils/: act_eval.py  llm.py
frameworks/openrca/: .env.example  .gitignore  ADAPTER_TODO.md  CLAUDE.md  agent_runner.py  pyproject.toml  pyproject_sota_rca.toml
frameworks/openrca/docs/: integration_guide.md  trajectory_analysis_sample1.md
frameworks/openrca/src/openrca/agents/: eval_agent.py
frameworks/taskweaver/: .gitignore  CLAUDE.md  agent_runner.py  pyproject_sota_rca.toml
frameworks/taskweaver/project/: planner_prompt.yaml
frameworks/taskweaver/project/plugins/: get_schema.py  get_schema.yaml  list_tables_in_directory.py  list_tables_in_directory.yaml  query_parquet_files.py
frameworks/thinkdepthai/: agent_runner.py  pyproject_sota_rca.toml
frameworks/thinkdepthai/middleware/v4/: __init__.py  config.py  dimension_cards.py  metacognitive_advisor.py  pipeline.py  state.py
infra/: docker-compose.yml  doctor.py  install.sh
platform/: README.md
scripts/: clone_agents.sh  post_matrix.sh  run_matrix.py  smoke_test.sh
sdk/sota_rca/: __init__.py  cli.py  cost_metrics.py  framework_base.py  legacy_agent.py  manifest.py  matrix.py  model_env.py  tracker.py
sdk/sota_rca/analysis/: extractor.py  intent_prompt.py  llm_intent_classifier.py  ngram_analysis.py  trajectory_normalizer.py  triplet_coherence.py  viz_trajectory.py
sdk/sota_rca/analysis/failure_analysis/: align_thinkdepthai_qwen_schema.py  apply_db_r_updates.py  apply_relabel_and_revc.py  behavior_failure_join.py  build_adversarial_prompt.py  build_dossiers.py  build_relabel_queue.py  build_transitions_cache.py  build_validation_worksheet.py  diff_adversarial_labels.py  final_vc_v4.py  harp_config.py  label_D_by_case.py  label_F_manual.py  label_PD_by_case.py  merge_R_write_db.py  pd_coupling_detail.py  pd_cramer_v.py  pd_merge.py  pd_refactor_red.py  pd_v4_consistency.py  sample_all_failure_cases.py  sample_verify_cases.py  validate.py  validation_server.py  verify_adjudicate.py  verify_extract_evidence.py  verify_report.py  verify_spot_check.py  write_labels_to_db.py  write_v3_projections.py
sdk/sota_rca/analysis/labeling/: arbitrate_disagreements.py  commit_manual_labels.py  export_3way_review.py  final_sweep_pending.py  labeling_server.py  relabel_disputed_sqls.py
sdk/sota_rca/analysis/mw_compare/: mw_vs_womw_chart.py  mw_vs_womw_extract.py  mw_vs_womw_zhoubao_charts.py
sdk/sota_rca/analysis/scripts/: classify_intents.py  extract_triplets.py  fault_propagation_analysis.py  node_investigation.py  run_ngram_analysis.py  run_triplet_coherence.py  tool_usage.py
sdk/sota_rca/analysis/sql_patterns/: scan_metrics_domain_extend.py  scan_metrics_svc_no_domain.py  scan_trace_sub_confident.py  scan_trace_sub_no_parent.py  scan_trace_sub_round2.py  scan_traces_groupby.py
sdk/sota_rca/data/: converters.py  incident_synth.py  ops_lite.py  trajectory.py
sdk/sota_rca/eval/: difficulty.py  legacy_preprocess.py  legacy_rejudge.py  preprocess.py  rca_metrics_fallback.py  rejudge.py
sdk/sota_rca/runner/: _fallback_db.py  db_writer.py  runner.py
sdk/sota_rca/utils/: env.py  log.py  sqlmodel_utils.py
study/analysis/: README.md
study/analysis/1-methodology/: DR_axis_labeling.md  README.md  agent_prompt_example.md  category.json  context_analysis.md  inspect.md  intention_category.md  intention_sunburst.html  parquet.md  sql_patterns.md
study/analysis/2-trajectories/: README.md
study/analysis/3-failure-modes/: README.md
study/analysis/3-failure-modes/2-by-framework/: README.md
study/analysis/3-failure-modes/_cache/: transitions_per_case.parquet
study/analysis/3-failure-modes/cross-agent/: README.md  case_list.md  v3_vs_local_28case_propagation.md  v4_vs_v3_local_28case_propagation.md
study/analysis/3-failure-modes/merged/: D_induction_log.md  D_phrases.jsonl  D_phrases_aiq.jsonl  D_phrases_claudecode.jsonl  D_phrases_qwen.jsonl  D_phrases_sonnet.jsonl  D_projection.v3.jsonl  D_taxonomy.md  F_labels.jsonl  PD-A_preflight_log.md  PD_cramer_v.json  PD_induction_log.md  PD_projection.jsonl  PD_projection.v3.jsonl  PD_projection_refactored.jsonl  PD_taxonomy.md  README.md  R_relabel_db_queue.v3.jsonl  applied_db_r_updates.v3.jsonl  applied_relabels.v3.jsonl  unified_R.md  (+23 more)
study/analysis/4-middleware/: README.md  v4_mid_check_strategy.md  v4_principles.md  v4_state.json  v4_thinkdepthai_qwen3.5_plus.md
study/analysis/5-reports/: README.md  middleware_example_pair_2026-04-22.md  weekly_summary_2026-04-22.md
study/analysis/6-planning/: README.md
tests/: test_smoke_imports.py  test_trajectory.py
tests/fixtures/: mock_trajectory.json  mock_trajectory_multi_agent.json
(+1320 files in other folders)
