[project]
name = "sota-rca-study"
version = "0.1.0"
description = "Reproducibility artifact for RCA Agent study: 6 frameworks × multi-model evaluation on ops-lite"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "sota-rca-study contributors" }]

dependencies = [
    # 框架底座: aegis v3 with [sdk, llm-eval] extras (pin commit hash)
    # Pinned: 2026-05-13 main HEAD; bump when needed.
    "rcabench-platform[sdk,llm-eval] @ git+https://github.com/OperationsPAI/aegis.git@0a2da31690df187842483b124bf816860daf1c9b#subdirectory=rcabench-platform",

    # 数据处理
    "polars>=1.0",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "datasets>=2.20",     # HuggingFace
    "huggingface-hub>=0.24",

    # DB
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",

    # LLM SDK (多 provider)
    "anthropic>=0.40",
    "openai>=1.50",
    "google-generativeai>=0.7",
    "litellm>=1.50",

    # LangChain (Trajectory converter 用)
    "langchain>=0.3",
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
    "langchain-google-genai>=2.0",

    # Orchestrator (asyncio is stdlib)
    "rich>=13.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "pydantic>=2.0",

    # Web (Dashboard backend)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",

    # Analysis
    "pandas>=2.2",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",

    # Utilities
    "tenacity>=9.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
sota-rca = "sota_rca.cli:main"

[project.entry-points."llm_eval.agents"]
# 6 个 agent 通过 setuptools entry-point 注册到 aegis v3
# 这些类位于 frameworks/<name>/src/<pkg>/agents/eval_agent.py
thinkdepthai = "thinkdepthai.agents.eval_agent:ThinkDepthAIEvalAgent"
aiq          = "aiq_rca.agents.eval_agent:AIQEvalAgent"
taskweaver   = "taskweaver_rca.agents.eval_agent:TaskWeaverEvalAgent"
openrca      = "openrca.agents.eval_agent:OpenRCAEvalAgent"
claudecode   = "claudecode_rca.agents.eval_agent:ClaudeCodeEvalAgent"
mabc         = "mabc_rca.agents.eval_agent:MABCEvalAgent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdk/sota_rca"]

[tool.hatch.metadata]
# Allow git+https direct refs in dependencies (rcabench-platform via git)
allow-direct-references = true

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    # 当 frameworks/* submodule 拉下来后，可作为 workspace member
    # "frameworks/thinkdepthai",
    # "frameworks/aiq",
    # ...
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]  # 行长用 formatter 处理

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
